@@ -37,6 +37,9 @@ Bugs fixed
 * #1923: Use babel features only if the babel latex element is nonempty.
 * #1942: Fix a KeyError in websupport.
 * #1903: Fix strange id generation for glossary terms.
+* #1796, On py3, automated .mo building cause UnicodeDecodeError
+* Fix: ``make text`` will crush if a definition list item has more than 1 classifiers as:
+  ``term : classifier1 : classifier2``.
 
 
 Release 1.3.1 (released Mar 17, 2015)
